# nexsy4-experiments

./: hoge.py  main.v  main.xdc  pyproject.toml
serch-solution/: CMakeLists.txt  main.cpp
